# opcut

./: .dockerignore  Dockerfile  Dockerfile.alpine  README.md  README.rst  dodo.py  pyproject.toml  requirements.pip.txt
.github/workflows/: docker-publish.yml
src_build/: c.py  common.py  js.py  pep517.py  py.py
src_doit/: __init__.py  libopcut.py
src_js/: common.ts  i18n.ts
src_js/vt/: params.ts
