[project]
name = "opcut"
version = "0.4.16"
description = "Cutting stock problem optimizer"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
    "aiohttp ~=3.10.11",
    "hat-aio ~=0.7.12",
    "hat-json ~=0.6.2",
    "pycairo ~=1.27.0",
]

[project.scripts]
opcut = "opcut.main:main"

[project.urls]
Homepage = "https://opcut.kopic.xyz"
Repository = "https://github.com/bozokopic/opcut.git"

[project.optional-dependencies]
dev = ["doit ~=0.37"]

[build-system]
requires = ["doit", "mkwhl", "packaging", "watchdog"]
build-backend = "src_build.pep517"

[tool.hat-doit]
build_wheel_task = "wheel"
